feat: Adicionar número de versão (v1.2.0) no header

--- a/index.html
+++ b/index.html
@@ -705,7 +705,10 @@
     <div class="app-container">
         <!-- Header -->
         <div class="header">
-            <div class="logo">🎤 TuneBuddy Pro</div>
+            <div style="display: flex; align-items: center; gap: 1rem;">
+                <div class="logo">🎤 TuneBuddy Pro</div>
+                <span style="font-size: 0.7rem; color: rgba(255,255,255,0.3); font-weight: 400;">v1.2.0</span>
+            </div>
             <div class="header-actions">
                 <button id="btnUserMenu" class="btn btn-secondary" style="margin-right: 1rem; display: none;">
                     <span id="userName">👤 Usuário</span>
