--- a/index.html
+++ b/index.html
@@ -74,10 +74,8 @@
             grid-template-columns: 1fr 400px;
             gap: 1.5rem;
             padding: 1.5rem 2rem;
-            overflow: auto;
-            height: 100%;
-            max-height: 100%;
-            min-height: 0; /* Permite que os filhos tenham scroll */
+            overflow: hidden;
+            width: 100%;
         }
 
         /* Lado esquerdo - Vídeo e controles */
@@ -86,6 +84,8 @@
             flex-direction: column;
             min-height: 0; /* Permite scroll interno */
             overflow-y: auto;
+            overflow-x: hidden;
+        }
             gap: 1rem;
         }
 
@@ -258,8 +258,6 @@
             gap: 1.5rem;
             overflow-y: auto;
             overflow-x: hidden;
-            max-height: 100%;
-            height: 100%;
             min-height: 0;
         }
 
